--- a/src/app/user-page/user-page.component.scss
+++ b/src/app/user-page/user-page.component.scss
@@ -178,7 +178,7 @@
     .value {
       color: #ff647c;
       font-weight: 600;
-      &.load {
+      &.free {
         color: #38cb8e;
       }
     }
@@ -199,6 +199,7 @@
       position: relative;
       cursor: pointer;
       &.tooltip {
+        opacity: 1;
         &:before {
           display: block;
           position: absolute;
@@ -434,6 +435,7 @@
   &__institution {
     font-weight: 600;
     margin-bottom: 6px;
+    margin-right: 5px;
     width: fit-content;
   }
   &__group {
