--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/birthday-user-settings/birthday-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/birthday-user-settings/birthday-user-settings.component.scss
@@ -6,6 +6,7 @@
   // padding: 0 50px;
   box-sizing: border-box;
   &>div {
+    width: 100%;
     min-width: 70px;
     height: 50px;
     margin-right: 70px;
