--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/main-user-settings/main-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/main-user-settings/main-user-settings.component.html
@@ -23,11 +23,14 @@
       <div class="full-name-block">
         <div class="fields">
           <h5 class="fields-title">Имя</h5>
-          <input class="fields-value" type="text" [(ngModel)]="userSettingsModel.name" maxlength="15">
+          <input class="fields-value" type="text" [(ngModel)]="userSettingsModel.name" maxlength="15"
+          placeholder="Имя"
+          >
         </div>
         <div class="fields">
           <h5 class="fields-title"> Фамилия</h5>
-          <input class="fields-value" type="text" [(ngModel)]="userSettingsModel.surname" maxlength="15">
+          <input class="fields-value" type="text" [(ngModel)]="userSettingsModel.surname" maxlength="15"
+          placeholder="Фамилия">
         </div>
       </div>
     </div>
