--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -185,6 +185,7 @@
     position: relative;
     cursor: pointer;
     &.tooltip {
+      opacity: 1;
       &:before {
         display: block;
         position: absolute;
@@ -286,7 +287,7 @@
     color: #323c47;
     margin-bottom: 14px;
   }
-  p {
+  &__text {
     margin: 0;
     // font-family: Source Sans Pro;
     font-style: normal;
