--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -198,6 +198,7 @@
     outline: none;
     &:hover {
       background: #5695fd;
+      color: #fff;
     }
     &:active {
       background: #1666ea;
