--- a/src/app/chat/components/collocutor-information/collocutor-information.component.html
+++ b/src/app/chat/components/collocutor-information/collocutor-information.component.html
@@ -33,7 +33,7 @@
       </div>
       <div>
         <span>Арбитраж</span>
-        <span>{{ collocutor.arbitration }}</span>
+        <span>{{ collocutor.arbitration.all }}</span>
       </div>
     </div>
     <span class="line"></span>
