--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.scss
@@ -63,7 +63,7 @@
       }
       &:last-child {
 
-        height: 43px;
+        height: 83px;
         // background: #000;
         // background: #3f60fb;
         background: #C3CCF2;
@@ -75,6 +75,7 @@
 
         h5 {
           color: #fff;
+          margin-bottom: 0;
         }
       }
 
@@ -193,4 +194,69 @@
     padding-right: 0;
     // overflow: auto;
   }
+}
+.step-detail::ng-deep {
+form {
+  ngb-popover-window {
+    border: none;
+    &.popover {
+      background: #ffffff;
+      box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
+      border-radius: 8px;
+      padding: 18px 23px 19px 28px;
+      left: 14px !important;
+      top: -5px !important;
+      z-index: 2;
+      max-width: 323px;
+
+      &:before {
+        content: "";
+        position: absolute;
+        left: -9px;
+        top: 8px;
+        width: 22px;
+        height: 22px;
+        background: #ffffff;
+        -webkit-transform: rotate(47deg);
+        transform: rotate(47deg);
+        box-sizing: border-box;
+        z-index: -1;
+      }
+
+      h3 {
+        font-family: "Source Sans Pro", sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        color: #000000;
+        margin: 0 0 12px;
+        background: transparent;
+        border: none;
+      }
+      .arrow {
+        display: none;
+      }
+      .popover-body {
+        margin: 0;
+        font-family: "Source Sans Pro", sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+
+        color: #707683;
+      }
+      &.tag {
+        top: 15px !important;
+      }
+    }
+
+    &.popover-select {
+      top: 25px !important;
+    }
+    &.popover-file {
+      top: -43px !important;
+    }
+  }
+}
 }
