user-page, service-page use comments module from shared

--- a/src/app/service-page/components/service-page-another-services/service-page-another-services.component.html
+++ b/src/app/service-page/components/service-page-another-services/service-page-another-services.component.html
@@ -1,6 +1,6 @@
 <section class="about-offer">
   <h4 class="section-title">
-    Другие услуги фрилансера <span>()</span>
+    Другие услуги фрилансера <span>( {{offerData.user.userOffers.length}} из {{offerData.user.userOfferCount}})</span>
   </h4>
   <div class="cards-list" *ngIf="offerData">
     <div class="card" *ngFor="let offer of offerData.user.userOffers">
