--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.html
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.html
@@ -76,6 +76,7 @@
           </ul>
         </form>
         <div class="btn-order-service 2" (click)="goCheckout(package)" >
+        <!-- <div class="btn-order-service 2" (click)="setState()" > -->
           Заказать услугу <span>(за {{ offerData[package].price }} ₴)</span>
         </div>
       </div>
